--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^10.7.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.468.0",
     "mongoose": "^8.0.3",
     "next": "14.0.4",
     "nextjs-toploader": "^1.6.4",
