--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@formspree/react": "^2.5.1",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
-    "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.1",
     "firebase": "^10.7.1",
@@ -20,7 +19,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
     "mongoose": "^8.0.3",
-    "next": "14.0.4",
+    "next": "^15.0.4",
     "nextjs-toploader": "^1.6.4",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
