--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@formspree/react": "^2.5.1",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.1",
     "firebase": "^10.7.1",
